# agr_pavi

./: .gitignore  CLAUDE.md  README.md  docker-compose-local-test.yml
.claude/: settings.local.json
api/: Dockerfile.local
api/aws_infra/: cdk_app.py
api/pipeline_workflow/: protein-msa.nf
api/src/: config.py  job_service.py  main.py
docs/: IMPLEMENTATION-PLAN-3-MONTH.md  PRD-PAVI-Technology-Stack-Overhaul.md  PRD.md  TECHNICAL-ROADMAP.md  TODO.md  UX-SPECIFICATIONS.md  architecture-diagram.md  backlog-review-summary.md  benchmark-results-baseline.md  pavi-assessment-references.bib  pavi-assessment-references.ris  pavi-scientific-utility-assessment.md  pavi-unified-backlog.md  pavi-webui-8week-ux-improvement-plan.md  pavi-webui-improvement-plan-summary.md  prd-pavi-public-launch-unified.md  step-functions-deployment-runbook.md  step-functions-design.md  ux-prioritized-roadmap.md  ux-roadmap-action-plan.md  variant-wg-reference.md  week1-completion-summary.md  week2-quick-start.md  week8-development-plan.md
docs/backlog/: KANBAN-432-pavi-master-epic.md  KANBAN-498-pavi-mvp-epic.md  KANBAN-500-pavi-phase-2-epic.md  KANBAN-514-nucleotide-transcript-alignments.md  KANBAN-532-recalculate-variant-effects.md  KANBAN-623-cloudwatch-environment-metrics.md  KANBAN-691-limit-allele-transcript-combos.md  KANBAN-727-remove-duplicate-reference-sequences.md  KANBAN-830-optimize-genome-download-storage.md  (+2 more)
webui/: eslint.config.mjs  next.config.mjs  package-lock.json  package.json
webui/aws_infra/: cdk_app.py  pyproject.toml
webui/aws_infra/cdk_classes/: webui_amplify.py
(+203 files in other folders)
